--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <title>I12</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="yes"/>
+    <!--<meta name="apple-mobile-web-app-capable" content="yes"/>-->
+    <!--<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui"/>-->
+    <!--<meta name="apple-mobile-web-app-status-bar-style" content="yes"/>-->
 
     <script src="./libs/angular-deps.js"></script>
     <script src="./main.js"></script>
